proposed changes implemented
